modules/en/entity_browser/2.15.x/agent/configure/browsers.md
# Configure an entity browser

![Entity Browsers list](../../../../../../../screenshots/entity_browser/2.15.x/browsers.png)

A browser is the config entity `entity_browser.browser.{name}`. Manage at
`/admin/config/content/entity_browser` (route `entity.entity_browser.collection`,
permission `administer entity browsers`). The edit form is a wizard: general →
widgets. Config schema: `entity_browser.browser.*` in `config/schema/entity_browser.schema.yml`.

A browser is assembled from four pluggable parts (see [../plugins/plugin-types.md](../plugins/plugin-types.md)):

- **display** — how it opens: `iframe`, `modal`, or `standalone` (its own page/route).
- **widget_selector** — how you switch widgets: `tabs`, `drop_down`, or `single`.
- **widgets** — the selection sources, ordered by weight: `view` (a Views listing),
  `upload` (file upload), `media_image_upload`, plus `entity_form` (Entity Browser IEF submodule).
- **selection_display** — how picked items show before submit: `multi_step_display`,
  `view`, or `no_display`.

Example exported config (`entity_browser.browser.sample.yml`):
```yaml
name: sample
label: 'Sample browser'
display: modal
display_configuration:
  width: 650
  height: 500
  link_text: 'Select entities'
  auto_open: false
widget_selector: tabs
widget_selector_configuration: {  }
selection_display: multi_step_display
selection_display_configuration:
  entity_type: node
  display: label
widgets:
  <uuid>:
    id: view
    uuid: <uuid>
    label: 'Browse content'
    weight: 0
    settings:
      view: content_entity_browser   # a View with an "Entity Browser" display
      view_display: entity_browser_1
```

- The `view` widget requires a View that has an **Entity Browser** display (module
  provides the display, argument-default, field, and filter Views plugins).
- Import with `drush config:import`; browsers are fully exportable/deployable.
- Standalone displays register a route and an auto-generated access permission
  (see [../permissions/permissions.md](../permissions/permissions.md)).
